--- a/app/src/main/res/layout/lay_pilihan.xml
+++ b/app/src/main/res/layout/lay_pilihan.xml
@@ -2,17 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundkonsumenn"
+
 
     >
 
 
     <ImageView
         android:layout_width="200dp"
-        android:layout_height="300dp"
-        android:src="@drawable/rapih_icon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_height="200dp"
+        android:src="@drawable/iconrapihabuabu"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         />
 
 
@@ -54,7 +55,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
 
-        android:src="@drawable/iconkonsumenn"
+        android:src="@drawable/iconkonsumen"
         />
 
 
@@ -65,7 +66,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="30dp"
         android:layout_marginStart="50dp"
-        android:src="@drawable/iconmitraa"
+        android:src="@drawable/iconmitra"
 
         />
 
