--- a/app/src/main/res/layout/lay_jumbotron.xml
+++ b/app/src/main/res/layout/lay_jumbotron.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:id="@+id/linear"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="250dp">
 
 
 
 <!--    <com.synnapps.carouselview.CarouselView-->
 <!--        android:id="@+id/carouselView"-->
 <!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="150dp"-->
+<!--        android:layout_height="match_parent"-->
 <!--        android:layout_gravity="center"-->
 <!--        android:layout_marginTop="30dp"-->
-<!--        app:radius="6dp"-->
-<!--        app:slideInterval="3000"-->
-<!--        app:strokeWidth="1dp"-->
-
-
 <!--        >-->
 
 <!--    </com.synnapps.carouselview.CarouselView>-->
