--- a/app/src/main/res/layout/lay_konfirmasi_pesanan_konsumen.xml
+++ b/app/src/main/res/layout/lay_konfirmasi_pesanan_konsumen.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundkonsumenn">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,7 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Komfirmasi Pesanan !"
+            android:text="Konfirmasi Pesanan !"
             android:textColor="@color/colorAccent"
             android:id="@+id/txtJdlPsn"
             android:layout_gravity="center"
