--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="birurapih">#004f82</color>
     <color name="birulain">#1d26d4</color>
+    <color name="merah">#f53939</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#58a2ed</color>
 <!--    <item name="colorControlNormal">#2196F3</item>-->
 
