--- a/app/src/main/res/layout/fragment_pesanan_ac_bottom.xml
+++ b/app/src/main/res/layout/fragment_pesanan_ac_bottom.xml
@@ -6,14 +6,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Konsumen.BottomNav.FragmentNavPesananAc">
 
-
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/swipeorderac"
+    >
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rvListOrderAc"
 
         />
-
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
