--- a/app/src/main/res/layout/fragment_pesanan_mitra_ac.xml
+++ b/app/src/main/res/layout/fragment_pesanan_mitra_ac.xml
@@ -6,6 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Konsumen.BottomNav.FragmentNavPesananAc">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/swipeordermitraac"
+        >
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
@@ -13,7 +18,7 @@
         android:id="@+id/rvListOrderMitraAc"
 
         />
-
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
