--- a/app/src/main/res/layout/fragment_pesanan_renov_bottom.xml
+++ b/app/src/main/res/layout/fragment_pesanan_renov_bottom.xml
@@ -2,18 +2,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Konsumen.BottomNav.FragmentNavPesananRenov">
 
-
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/swipehistoryrenov"
+    >
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rvListOrder"
 
         />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
 
+        />
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,7 +32,5 @@
         android:layout_centerInParent="true"
 
         />
-
-
 
 </RelativeLayout>
