--- a/app/src/main/res/layout/lay_faqsatu.xml
+++ b/app/src/main/res/layout/lay_faqsatu.xml
@@ -1,21 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_back"
+        android:layout_marginStart="10dp"
+        android:id="@+id/imgbackfaqsatu"
+        />
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:src="@drawable/iconrapihabuabu"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="affd"
+        android:text="Semua pekerjaan yang berkaitan dengan Kebutuhan Bangun Rumah / Perbaikan Rumah anda,\n mulai dari yang umum seperti perbaikan Atap Rumah / Plafon, hingga Rancangan Pelaksanaan Proyek secara menyeluruh.\n\n Setiap pemesanan kerja yang dilakukan Konsumen melalui aplikasi rapih.id akan ditangani oleh Mitra (Pelaksana Proyek/Kontraktor) sesuai dengan Spesialisasi / Keahlain masing-masing Mitra.
+"
+        android:textColor="#000"
+        android:textSize="20sp"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
 
 
         />
 
 </LinearLayout>
+</ScrollView>
