--- a/app/src/main/res/layout/lay_detail_order_cuci_ac_konsumen.xml
+++ b/app/src/main/res/layout/lay_detail_order_cuci_ac_konsumen.xml
@@ -25,7 +25,7 @@
             android:src="@drawable/ic_back"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
-            android:id="@+id/imgbackdetailordermitraac"
+            android:id="@+id/imgbackdetailorderac"
             />
 
         <TextView
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:text="email"
             android:layout_gravity="bottom"
-            android:id="@+id/txtemaildetailordermitraac"
+            android:id="@+id/txtemaildetailorderac"
             android:textColor="#1d26d4"
             android:layout_marginStart="10dp"
             android:layout_weight="10"
@@ -44,20 +44,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txtpadetailordermitraac"
-        android:text="perbaikan ac"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="20dp"
-
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtbpacdetailordermitraac"
-        android:text="bongkar pasang ac"
+        android:id="@+id/txtdetailorderac"
+        android:text="order ac"
         android:textColor="#000"
         android:textSize="15sp"
         android:layout_marginTop="20dp"
@@ -67,8 +55,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txtcadetailordermitraac"
-        android:text="cuci ac"
+        android:id="@+id/txtdetailjenisproperti"
+        android:text="jenis properti"
         android:textColor="#000"
         android:textSize="15sp"
         android:layout_marginTop="20dp"
@@ -78,18 +66,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txtfreondetailordermitraac"
-        android:text="freon"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtjadetailordermitraac"
+        android:id="@+id/txtjadetailorderac"
         android:text="jumlah ac"
         android:textColor="#000"
         android:textSize="15sp"
@@ -100,7 +77,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txtlokasidetailordermitraac"
+        android:id="@+id/txtlokasidetailorderac"
         android:text="lokasi anda"
         android:textColor="#000"
         android:textSize="15sp"
@@ -111,7 +88,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txttgldetailordermitraac"
+        android:id="@+id/txttgldetailorderac"
         android:text="tanggal"
         android:textColor="#000"
         android:textSize="15sp"
@@ -122,7 +99,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txtdpdetailordermitraac"
+        android:id="@+id/txtdpdetailorderac"
         android:text="deskripsi pekerjaan"
         android:textColor="#000"
         android:textSize="15sp"
@@ -133,7 +110,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txttotaldetailordermitraac"
+        android:id="@+id/txttotaldetailorderac"
         android:text="total harga"
         android:textColor="#000"
         android:textSize="15sp"
@@ -145,8 +122,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txtnohpdetailordermitraac"
-        android:text="no hp"
+        android:id="@+id/txtnohpdetailorderac"
+        android:text="No hp"
         android:textColor="#000"
         android:textSize="15sp"
         android:layout_marginTop="20dp"
@@ -158,7 +135,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/btnokdetailordermitraac"
+        android:id="@+id/btnokdetailorderac"
         android:background="@drawable/button_login"
         android:text="ok"
         android:textColor="#fff"
